<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="essence_settings_title">Welcome to Essence</string>
    <string name="extensions_title">Essence</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="system_category">Team</string>
    <string name="themes_category">Themes</string>
    <string name="qs_category">QS</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="hardware_category">Extras</string>
    <string name="build_tweaks_summary_title">Strive for Amelioration</string>
    <string name="listview">ListView</string>
    <string name="rom_name">Project Elixir</string>
    <string name="rom_summ">Project Elixir is another aftermarket AOSP ROM which basically offers minimal UI enhancement and close to Stock Android ROM experience with great performance, security, customisation and stability. In short, its perfectly balanced between great Performance, Security, Stability, Minimal UI, Customisation and awesome features including pixel goodies </string>
    <string name="dev_support">Developers and Team</string>
    <string name="dev1">Saurav</string>
    <string name="dev1_summary">Founder, Lead Developer</string>
    <string name="dev2">Nishant</string>
    <string name="dev2_summary">Developer, Team</string>
    <string name="dev3">Probir</string>
    <string name="dev3_summary">Developer, Team</string>
    <string name="dev4">Mayur</string>
    <string name="dev4_summary">Developer, Team</string>
    <string name="note">Important NOTE</string>
    <string name="note_summary">Dont Direct Message any devs, groups are there for some reason and use some brain. If we see any direct message we will ban him or her from everywhere. We arent here to serve you 24*7 so just keep patience. Just let us live our life peacefully</string>
    <string name="download">Download your Builds</string>
    <string name="download_summary">Tap here to download builds for your respective devices</string>
    <string name="paypal">Paypal</string>
    <string name="donate_summary">Do consider donating, if you want to appreciate our work and for seamless updates.</string>
    <string name="tele_group">Telegram Discussion Group</string>
    <string name="grp_summary">If you have any issues, do share in our telegram discussion group</string>
    <string name="tele_channel">Telegram Update Channel</string>
    <string name="update_summary">Subscribe us on telegram channel for faster updates</string>
    <string name="website">Our Official Website</string>
    <string name="website_summary">Do visit our website, You will get all necessary info here</string>
    <string name="download_donate">Download and Website</string>
    <string name="telegram">Telegram Support</string>
    <string name="donateus">Support Us by Donating</string>
    <string name="patreon">Want Early Build access ?</string>
    <string name="patreon_summary">For those who wants to support devs, and early build access, some exclusive features and benefits.</string>
    <string name="misc_category">Misc Settings</string>
    <string name="fingerprint_category">FP Sensor</string>
    <string name="qs_tile_cat">QS Options</string>
    <string name="volte_category">VoLTE Options</string>
    <string name="netindi_category">Network Indicator</string>
    <string name="statusbar_clock">Clocks Style</string>
    <string name="buttons_category">Power Menu</string>
    <string name="lockscreen_gestures_category">LockScreen Gesture</string>
    <string name="lockscreen_customization_category">Lockscreen Customizations</string>
    <string name="statusbar_gesture_category">Statusbar Gesture</string>
    <string name="battery_settings_title">Battery Settings</string>
    <string name="ls_cat_secure">Secure Lockscreen</string>
    <string name="signal_category">Network Icon</string>
    <string name="notification_custs">Notification Options</string>
    <string name="date_category">Date Options</string>
    <string name="clock_category">Clock Options</string>
    <string name="extensions_dialog_title">Help us help you!</string>
    <string name="extensions_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="extensions_dialog_toast">READ THE WHOLE THING!</string>
    <string name="artwork_media_fade_level_summary">Fading the media artwork image</string>
    <string name="global_actions_advanced_reboot_title">Enable advance restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>
    <string name="double_tap_sleep_gesture_title">Tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Double-tap anywhere on the status bar to put the device to sleep</string>
    <string name="lockscreen_tweaks_category_title">What to do</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep on lockscreen</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Customize the traffic indicators</string>
    <string name="network_traffic_autohide_threshold_title">Auto-hide threshold</string>
    <string name="network_traffic_location_title">Location</string>
    <string name="network_traffic_disabled">Disabled</string>
    <string name="network_traffic_statusbar">Status bar</string>
    <string name="network_traffic_qs_header">QS header</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_dynamic">Dynamic</string>
    <string name="network_traffic_download">Download</string>
    <string name="network_traffic_upload">Upload</string>
    <string name="network_traffic_mode_summary">Traffic Indicator Mode</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="fprint_sucess_vib_title">Fingerprint success vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on failed fingerprint authentication</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize your statusbar clock</string>
    <string name="status_bar_clock_title">Clock &amp; Date Settings</string>
    <string name="status_bar_clock">Clock &amp; Date</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="statusbar_clock_style_title">Clock &amp; date position</string>
    <string name="statusbar_clock_style_right">Right</string>
    <string name="statusbar_clock_style_centre">Centre</string>
    <string name="statusbar_clock_style_left">Left</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock &amp; date</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="battery_style_category_title">Battery styles</string>
    <string name="battery_percent_title">Battery percent</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="lockscreen_power_menu_disabled_title">Disable power menu on lock screen</string>
    <string name="lockscreen_power_menu_disabled_summary">This will only disable the power menu on secure lock screens</string>
    <string name="qs_brightness_slider_category">Brightness slider</string>
    <string name="qs_brightness_slider_title">Show brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="qs_brightness_position_bottom_title">Show brightness slider on bottom</string>
    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
    <string name="brightness_icon_title">Adaptive brightness button</string>
    <string name="brightness_icon_summary">Show adaptive brightness button</string>
    <string name="quick_qs_brightness_slider_title">Show brightness slider in Quick QS Panel</string>
    <string name="quick_qs_brightness_slider_summary">Show a brightness slider in the quick qs panel</string>
    <string name="customisation_title">Themes</string>
    <string name="monet_engine_custom_color_title">Use custom color</string>
    <string name="monet_engine_custom_color_summary">Use custom color for monet engine instead of wallpaper colors</string>
    <string name="monet_engine_color_override_title">Custom color</string>
    <string name="monet_engine_white_luminance_user_title">White luminance</string>
    <string name="monet_engine_accurate_shades_title">Use accurate shades</string>
    <string name="monet_engine_chroma_factor_title">Chroma factor</string>
    <string name="monet_engine_linear_lightness_title">Use linear lightness</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="summ_gesture">Playback Control • System Navigation</string>
    <string name="summ_lock">DT2S • Media Art • Edge Lighting</string>
    <string name="summ_misc">Game Space • Power Menu • HwKey Options</string>
    <string name="summ_monet">Monet • Theming • Lockscreen Clock</string>
    <string name="summ_quick">QS Styles • Media Artwork • Data Usage</string>
    <string name="summ_sbar">Network Traffic • VoLTE/VoWifi </string>
    <string name="summ_about">About Project Elixir ROM and Its Developers</string>
    <string name="donate">Donate us here</string>
    <string name="gestures_title">Gestures</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="statusbar_title">Status bar</string>
</resources>