<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:title="@string/buttons_category" >

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
        android:key="advanced_reboot"
        android:title="@string/global_actions_advanced_reboot_title"
        android:summary="@string/global_actions_advanced_reboot_summary"
        android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="lockscreen_ui_finterprint_category"
        android:title="@string/fingerprint_category">

    <com.android.settings.custom.preference.SystemSettingSwitchPreference
        android:key="fingerprint_success_vib"
        android:title="@string/fprint_sucess_vib_title"
        android:summary="@string/fprint_sucess_vib_summary"
        android:persistent="true" />

    <com.android.settings.custom.preference.SystemSettingSwitchPreference
        android:key="fingerprint_error_vib"
        android:title="@string/fprint_error_vib_title"
        android:summary="@string/fprint_error_vib_summary"
        android:persistent="true" />

    </PreferenceCategory>

</PreferenceScreen>
