<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

   <PreferenceCategory
	   android:key="qs_category"
	   android:layout="@layout/custom_preference_category2"
        android:title="@string/qs_tile_cat">

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="quick_settings_vibrate"
            android:title="@string/quick_settings_vibrate_title"
            android:summary="@string/quick_settings_vibrate_summary"
            android:defaultValue="false"/>

   </PreferenceCategory>

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />

    <PreferenceCategory
        android:key="quick_settings_brighness_category"
        android:title="@string/qs_brightness_slider_category">

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="qs_show_brightness"
            android:title="@string/qs_brightness_slider_title"
            android:summary="@string/qs_brightness_slider_summary"
            android:defaultValue="true"/>

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="sysui_qqs_brightness_slider"
            android:title="@string/quick_qs_brightness_slider_title"
            android:summary="@string/quick_qs_brightness_slider_summary"
            android:dependency="qs_show_brightness"
            android:defaultValue="false"/>

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness_button"
            android:title="@string/brightness_icon_title"
            android:summary="@string/brightness_icon_summary"
            android:defaultValue="true"
            android:dependency="qs_show_brightness"/>

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="qs_brightness_position_bottom"
            android:title="@string/qs_brightness_position_bottom_title"
            android:summary="@string/qs_brightness_position_bottom_summary"
            android:defaultValue="false"
            android:dependency="qs_show_brightness" />

    </PreferenceCategory>

</PreferenceScreen>
