<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2017-2019 The PixelDust Project
     Copyright (C) 2022 PixelPlusUI

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title=" ">

    <com.android.settingslib.widget.LayoutPreference
        android:key="about_elixir"
        android:layout="@layout/about_essence"
        android:selectable="false" />

    <Preference
        settings:layout="@layout/essence_pref_card_top"
        android:fragment="org.elixir.essence.categories.System"
        android:key="system_category"
        android:textStyle="bold"
        android:summary="@string/summ_about"
	    android:title="Know more about us" />

    <Preference
	    android:title="@string/donate"
	    android:textStyle="bold"
	    settings:layout="@layout/essence_pref_card_bot"
	    android:summary="@string/donate_summary">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.paypal.me/uglykid24" />
    </Preference>

    <!-- Monet  -->
    <Preference
        settings:layout="@layout/essence_pref_card_top"
        android:fragment="org.elixir.essence.categories.Themes"
        android:key="customisation"
        android:textStyle="bold"
        android:summary="@string/summ_monet"
        android:title="@string/customisation_title" />

    <!-- Status Bar  -->
    <Preference
        settings:layout="@layout/essence_pref_card_mid"
        android:fragment="org.elixir.essence.categories.StatusBar"
        android:key="statusbar_category"
        android:textStyle="bold"
        android:summary="@string/summ_sbar"
        android:title="@string/statusbar_title" />

    <!-- Quick Settings  -->
    <Preference
        settings:layout="@layout/essence_pref_card_mid"
        android:fragment="org.elixir.essence.categories.Qs"
        android:key="quicksettings_category"
        android:textStyle="bold"
        android:summary="@string/summ_quick"
        android:title="@string/quicksettings_title" />

    <!-- Lock Screen  -->
    <Preference
        settings:layout="@layout/essence_pref_card_mid"
        android:fragment="org.elixir.essence.categories.Lockscreen"
        android:key="lockscreen_category"
        android:textStyle="bold"
        android:summary="@string/summ_lock"
        android:title="@string/lockscreen_title" />

    <!-- Gestures -->
    <Preference
        settings:layout="@layout/essence_pref_card_mid"
        android:fragment="com.android.settings.gestures.GestureSettings"
        android:key="gestures_category"
        android:textStyle="bold"
        android:title="@string/gestures_title"
        android:summary="@string/summ_gesture"
        settings:controller="com.android.settings.gestures.GesturesSettingPreferenceController" />


    <!-- Misc   -->
    <Preference
        settings:layout="@layout/essence_pref_card_bot"
        android:fragment="org.elixir.essence.categories.Hardware"
        android:key="misc_category"
        android:textStyle="bold"
        android:summary="@string/summ_misc"
        android:title="@string/misc_title" />

</PreferenceScreen>
