<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">


   <PreferenceCategory
        android:key="statusbar_category"
        android:title="@string/status_bar_category">

    <Preference
            android:key="traffic"
            android:fragment="org.elixir.essence.fragments.Traffic"
            android:title="@string/traffic_title" />

   </PreferenceCategory>

   <PreferenceCategory
        android:key="statusbar_gesture_category"
        android:title="@string/statusbar_gesture_category">

         <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_gesture"
            android:title="@string/double_tap_sleep_gesture_title"
            android:summary="@string/double_tap_sleep_gesture_summary"
            android:defaultValue="false" />

   </PreferenceCategory>

   <PreferenceCategory
            android:title="@string/statusbar_clock">

              <Preference
	        android:fragment="org.elixir.essence.fragments.ClockOptions"
	        android:key="clock_options_category"
	        android:summary="@string/clock_options_summary"
	        android:title="@string/clock_options_title" />

    </PreferenceCategory>

   <PreferenceCategory
        android:key="battery_style_category"
        android:title="@string/battery_style_category_title" >

    <com.android.settings.custom.preference.SystemSettingListPreference
	    android:key="status_bar_battery_style"
            android:title="@string/status_bar_battery_style_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="0" />

    <com.android.settings.custom.preference.SystemSettingListPreference
	    android:key="status_bar_show_battery_percent"
            android:title="@string/battery_percent_title"
            android:dialogTitle="@string/battery_percent_title"
            android:entries="@array/battery_percent_entries"
            android:entryValues="@array/battery_percent_values"
            android:defaultValue="0" />

    </PreferenceCategory>

</PreferenceScreen>
