<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title=" ">

    <!-- Header -->
    <PreferenceCategory
        android:title="Miscellaneous"
        android:layout="@layout/custom_preference_category_essence">
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
	    android:title="@string/buttons_category" >
    
        <org.elixir.essence.preferences.SystemSettingSwitchPreference
            android:key="lockscreen_power_menu_disabled"
		settings:layout="@layout/xd_pref_card_top"
		android:title="@string/lockscreen_power_menu_disabled_title"
            android:summary="@string/lockscreen_power_menu_disabled_summary"
            android:defaultValue="true" />

        <org.elixir.essence.preferences.SecureSettingSwitchPreference
		android:key="advanced_reboot"
		settings:layout="@layout/xd_pref_card_bot"
            android:title="@string/global_actions_advanced_reboot_title"
            android:summary="@string/global_actions_advanced_reboot_summary"
            android:defaultValue="false" />
   
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
	    android:title="Essence Customisations" >
    
        <SwitchPreference
		android:key="hide_essence_icons"
		settings:layout="@layout/xd_pref_card_mid2"
            android:title="Hide icons of essence"
            android:summary="Requires restart essence for changes to take effect."
            android:defaultValue="false" />

    </PreferenceCategory>
</PreferenceScreen>
